drop jsr305 annotations because of javax namespace, fix JDK17 internal reflection access in validation