@@ -17,6 +17,8 @@ test {
             '--add-exports=jdk.unsupported/sun.misc=ALL-UNNAMED',
             '--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED',
             '--add-opens=jdk.compiler/com.sun.tools.javac=ALL-UNNAMED',
+            '--add-opens=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED',
+            '--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
             '--add-opens=java.base/java.lang=ALL-UNNAMED',
             '--add-opens=java.base/java.lang.reflect=ALL-UNNAMED',
             '--add-opens=java.base/java.io=ALL-UNNAMED',
